crates/core/tests/snapshots/un_esm_rule__compound_exports_assignment_in_var_decl.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
export const history = createBrowserHistory();
use(history);
