crates/core/tests/snapshots/un_esm_rule__compound_exports_same_name_merges_to_export_decl.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
"use strict";
export const SessionContext = React.createContext(undefined);
use(SessionContext);
