crates/core/tests/snapshots/un_esm_rule__direct_webpack_export_getter_member_return_does_not_leak_helper.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
export { take } from "./effects.js";
