crates/core/tests/snapshots/un_esm_rule__direct_webpack_export_getters_become_named_exports.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
export const APP_NAME = "Revenue Console";
export function readSetting(t, e = null) {
    return e;
}
