crates/core/tests/snapshots/un_esm_rule__export_conflict_rename_avoids_nested_shadow_capture.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
const _a_2 = 0;
function f(_a) {
    return _a_2 + _a;
}
export const a = function(x) {
    return _a_2 + f(x);
};
