crates/core/tests/snapshots/un_esm_rule__export_conflict_rename_preserves_object_pattern_key.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
var obj = {
    a: 1
};
var { a: _a } = obj;
export const a = function(x) {
    return _a + x;
};
