crates/core/tests/snapshots/un_esm_rule__export_name_takes_priority_over_conflicting_local.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
const _a = 0;
export const a = function(x) {
    return _a + x;
};
