crates/core/tests/snapshots/un_esm_rule__hoist_require_call_invocation.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
import _default from "./factory.js";
export default _default();
