crates/core/tests/snapshots/un_esm_rule__hoist_require_from_seq_expr_in_export_default.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
import _i from "./a.js";
import "./b.js";
let i;
i = _i;
export default i.foo;
