crates/core/tests/snapshots/un_esm_rule__iife_with_used_param_keeps_webpack_export_getter_wrapped.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
((t)=>{
    require.d(exports, "value", ()=>t.value);
})(require("./dep.js"));
