crates/core/tests/snapshots/un_esm_rule__inline_conditional_interop_to_import.snap
---
source: crates/core/tests/un_esm_rule.rs
assertion_line: 824
expression: output
---
import _i from "./react.js";
let i;
i = _i;
console.log(i);
