crates/core/tests/snapshots/un_esm_rule__no_rename_when_export_name_is_free.snap
---
source: crates/core/tests/un_esm_rule.rs
expression: output
---
const b = 0;
export const a = function(x) {
    return b + x;
};
